# retrosync

./: .gitignore  README.md  docker-compose.yml
API/: Dockerfile  requirements.txt
API/app/: backend.py  classes.py  crud.py  database.py  main.py  models.py  schemas.py  test_api.py
CLI/: pyproject.toml
CLI/src/retrosync_cli/: classes.py  retrosync_cli.py
Daemon/: always_on.py  helper_functions.py  test_script.py  wiitdb_processed_4cs.csv  wiitdb_processor.py
Daemon/Dolphin/: always_on.py  classes.py  helper_functions.py  metadata.py  wiitdb.txt
Daemon/Dolphin/csv/: wiitdb_processed1.csv  wiitdb_processed2.csv
Daemon/csv/: wiitdb_processed_4cs2.csv  wiitdb_processed_6cs.csv
Frontend/: .dockerignore  Dockerfile
Frontend/retrosync-preprod/: .dockerignore  Dockerfile  package-lock.json  package.json
Frontend/retrosync-preprod/components/: test_button.js
Frontend/retrosync-preprod/src/: App.js
Frontend/retrosync-preprod/src/components/: CloudDashboard.js  LocalDashboard.js  PostRequest.js  TabComponent.js  test_app.js  test_button.js
Frontend/retrosync-preprod/src/services/: DaemonStatusChecker.js  PostSyncRequest.js
